@@ -1,3 +1,8 @@
+2005-01-03  Jonathan Pryor  <jonpryor@vt.edu>
+
+	* fstab.c: Solaris doesn't support getfsent(3), but it provides equivalent
+	  functionality in getvfsent(3C).  Implement Solaris support.
+
 2005-01-02  Jonathan Pryor  <jonpryor@vt.edu>
 
 	* stdio.c: More wrapper functions.  I missed a few macros...  This should
